--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <br>
 <br>
 
-<a href="receb" download><img src="download.png" width="400"></a>
+<a href="receb.zip" download><img src="download.png" width="400"></a>
 </center>
 
 <p>"bohohohohoyt"</p>
